syntax = "proto3";
package evmos.atom.v1;

import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";

import "cosmos_proto/cosmos.proto";
import "evmos/atom/v1/atom.proto";

option go_package = "github.com/evmos/evmos/v6/x/atom/types";
// Query defines the gRPC querier service.
service Query {
  // AtomUsd queries the AtomUSD price
  rpc AtomUsd(QueryAtomUsdRequest) returns (QueryAtomUsdResponse) {
    option (google.api.http).get = "/relevantcommunity/oracle/atome/atomusd";
  }
}


// QueryAtomUsdRequest is the request type for the Query/AtomUsd RPC method
message QueryAtomUsdRequest {
}

// QueryAtomUsdResponse is the response type for the Query/AtomUsd RPC method
message QueryAtomUsdResponse {
  AtomUsd atomUsd = 1;
}


